# nico

./: .gitignore  Annotations.py  Covariations.py  Interactions.py  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/nico/: Annotations.py  __init__.py
src/nico/utils/: SCTransform.py  __init__.py
