[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nico"
version = "1.5.0"
description = "Neighborhood informed Cell-type cOmposition analysis for spatial transcriptomics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NiCo Development Team"}
]
keywords = ["spatial transcriptomics", "cell type annotation", "niche analysis", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "networkx>=2.6.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "KDEpy>=1.1.0",
    "gseapy",
    "xlsxwriter"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ipython>=7.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ankitbioinfo/nico"
Documentation = "https://github.com/ankitbioinfo/nico"
Repository = "https://github.com/ankitbioinfo/nico"
"Bug Tracker" = "https://github.com/ankitbioinfo/nico/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
